fix: fix player layout issue

--- a/web/components/discover-music/style.scss
+++ b/web/components/discover-music/style.scss
@@ -30,7 +30,7 @@ $headHeight: 55px;
 
 .content-box {
   width: 100%;
-  max-height: calc(100% - 70px);
+  max-height: 100%;
   overflow-x: hidden;
   position: relative;
   z-index: 0;
