--- a/web/components/root/style.scss
+++ b/web/components/root/style.scss
@@ -24,7 +24,8 @@ $slideWidth: 20%;
 .player {
   width: 100%;
   height: 70px;
-  position: relative;
+  position: fixed;
+  bottom: 0;
   z-index: 2;
 }
 
